--- a/speed 2.html
+++ b/speed 2.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+ <meta name="google-adsense-account" content="ca-pub-4511226549994023">
+  
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Launching — Glass Cube Motion (Gold Edition)</title>
